# sabi-llm

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  REPORT.md  pyproject.toml  requirements.txt  run.sh  setup.sh
benchmarks/: README.md  prompts.jsonl
config/: default.yaml  sabi.yaml
data/corpus/: employee_handbook.md  growth_strategy_2026.md  q1_sales_report.csv
docs/: MODEL.md  PUBLISH_MODEL.md  SUBMISSION_CHECKLIST.md  VIDEO_SCRIPT.md
models/: README.md
prompts/: agent.txt  code.txt  router.txt  system.txt  think.txt
sabi/: __init__.py  __main__.py  agent.py  benchmark.py  cli.py  config.py  conversations.py  doctor.py  downloader.py  filereader.py  model.py  permissions.py  profiler.py  project_scanner.py  router.py  runner.py  runtime.py  server.py  workspace_manager.py
sabi/engines/: __init__.py  code.py  think.py
sabi/memory/: __init__.py  store.py
sabi/rag/: __init__.py  embeddings.py  retriever.py  vector_store.py
sabi/tools/: __init__.py  base.py  file_tools.py  shell_tools.py  workspace_tools.py
sabi/ui/: __init__.py  chat.py  console.py  tui.py
sabi/ui/web/: app.js  index.html  styles.css
scripts/: benchmark.py  customize_model.py  download_model.py  quantize_model.sh  run_benchmark.py
src/sabi/: __init__.py  agent.py  app.py  compliance.py  config.py  embeddings.py  ingest.py  languages.py  memory.py  model.py  prompts.py  rag.py  tools.py
tests/: test_agent.py  test_config_cli.py  test_filereader.py  test_memory.py  test_permissions.py  test_project_scanner.py  test_rag.py  test_router.py  test_sabi.py  test_server.py  test_tools.py  test_tui.py
web/: index.html
